--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html lang="en"><head>
   <title>&ensp;Saintgits MCA Department</title>
-  <link rel="icon" href="../images/Logo.jpg"><meta name="viewport" content="width:extend-to-zoom;zoom:1.0">
+  <link rel="icon" href="../images/Logo.jpg"><meta name="viewport">
   <link rel="canonical" href="https://saintgits-mca.github.io">
-  <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+  <meta http-equiv="Content-Type" content="text/html;charset=utf-8">
   <meta name="title" content="Saintgits MCA Department">
   <meta name="description" content="MCA at Saintgits is inclined more toward Application Development and thus has more emphasis on the latest programming language and tools to develop....">
   <meta name="keywords" content="Saintgits, saintgits, Saintgits MCA, saintgits mca, MCA, Saintgits MCA Department, saintgits mca department, saintgits mca github, Saintgits-MCA, saintgits-mca, saintgits mca college, Saintgits MCA College">
