--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en"><head>
   <title>&ensp;Saintgits MCA Department</title>
-  <link rel="icon" href="../images/Logo.jpg"><meta name="viewport">
+  <link rel="icon" href="../images/Logo.jpg"><meta name="viewport" content="width:device-width;initial-scale:1.0">
   <link rel="canonical" href="https://saintgits-mca.github.io">
   <meta http-equiv="Content-Type" content="text/html;charset=utf-8">
   <meta name="title" content="Saintgits MCA Department">
