--- a/index.html
+++ b/index.html
@@ -93,6 +93,11 @@ a{
   color:navy;
   text-decoration:none
 }
+p{
+    text-align:justify;
+    margin-left: 20px;
+    margin-right: 20px;
+}
 .black-link
 {
   color:black;
