--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@ Saintgits faculty members dominated the All Kerala – Art of Teaching Competiti
                                &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<i id="or">OR</i> <br>
                                <br><ul class="list">&nbsp;&nbsp;&nbsp;&nbsp;<li>B. Sc. / B. Com. / B. A  graduates with Mathematics at 10+2 level or at Graduation Level  in the qualifying Examination.</li><br><br></ul>
   <center><b class="sub1">Integrated MCA</b></center><br>
-  <p align="justify">Integrated MCA is a five years programme, spanning ten semesters, approved by AICTE and affiliated to APJ Abdul Kalam Technological University, where students can be admitted to two years MCA course after three years of study of BCA course. Students are exposed to the various areas of computer applications and provide a sound practical skill which is required by leading IT companies.</p>
+  <p class="p">Integrated MCA is a five years programme, spanning ten semesters, approved by AICTE and affiliated to APJ Abdul Kalam Technological University, where students can be admitted to two years MCA course after three years of study of BCA course. Students are exposed to the various areas of computer applications and provide a sound practical skill which is required by leading IT companies.</p>
   <br><br>
   <b></b><b>Eligibility</b><br><br><ul class="list"><li>Passed 10+2 examination with Mathematics/ Statistics/ Accountancy as compulsory subjects.</li></ul>
     <br><br><br>
@@ -211,6 +211,4 @@ Saintgits faculty members dominated the All Kerala – Art of Teaching Competiti
       <br><center><b id="bottomnav">LEARN. GROW. EXCEL</b></center>
   &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
    </div>
-  
-  
-  </body></html>
+ </body></html>
