--- a/index.html
+++ b/index.html
@@ -17,7 +17,10 @@
     font-size:20px;
   }
   .topnav{
-    background-color:red;border:9px solid red;height:50px;width:980
+    background-color:red;
+border:9px solid red;
+height:50px;
+width:980px;
   }
   .topnav2{
     background-color:lightgrey;
