--- a/index.html
+++ b/index.html
@@ -20,10 +20,11 @@
     background-color:red;
 border:9px solid red;
 height:50px;
-width:980px;
+width:970px;
   }
   .topnav2{
     background-color:lightgrey;
+    width:970px;
   }
 #or
 {
@@ -129,7 +130,7 @@ a{
   <br>
   </div>
   <center><img src="../images/Admin-Block.webp" alt="Admin-Block.webp" width="970px" height="250px"></center>
-  <div class="topnav2"  width="200">
+  <div class="topnav2">
   <center><marquee behavior="scroll" direction="left" scrollamount="13" width="900px" height="70px" id="marq1"><br><b>LATEST NEWS</b>  &emsp;&emsp;Saintgits wins the prestigious IDA – STEM Award for Community Development.&emsp;&emsp; *** &emsp;&emsp;
 ASCE Saintgits Team represented India at the ASCE Society-wide finals of Sustainable Solutions, hosted by Lousiana Tech University, Ruston, USA. &emsp;&emsp;***&emsp;&emsp;
 Rs. 76,720 CERD fund Sanctioned for Students’ Projects.&emsp;&emsp; ***&emsp;&emsp; ASCE Saintgits Student Chapter bagged Third Prize at ASCE National Concrete Canoe Competition, hosted by Punjab Engineering College, Chandigarh.&emsp;&emsp;***&emsp;&emsp;
