--- a/index.html
+++ b/index.html
@@ -20,9 +20,11 @@
     background-color:red;
 border:9px solid red;
 height:50px;
+margin-right:0px;
   }
   .topnav2{
     background-color:lightgrey;
+    margin-right:0px;
   }
 #or
 {
