--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@ Saintgits faculty members dominated the All Kerala – Art of Teaching Competiti
   <b>&nbsp;&nbsp;Ms. Ansu Mariam Cherian<br></b>
   &nbsp;&nbsp;Admissions Officer<br>
   &nbsp;&nbsp;<a href="tel:+919961672222" class="black-link">+91 9961672222</a><br>
-  &nbsp;&nbsp;<a href="mailto:ansu.mc@saintgits.org" class="black-link">ansu.mc@saintgits.org</a>
+  &nbsp;&nbsp;<a href="mailto:ansu.mc@saintgits.org" class="black-link">ansu.mc@saintgits.org</a><br><br>
   </div>
   <div class="topnav6">
       <br><center><b id="bottomnav">LEARN. GROW. EXCEL</b></center>
