--- a/index.html
+++ b/index.html
@@ -8,7 +8,120 @@
   <meta name="description" content="MCA at Saintgits is inclined more toward Application Development and thus has more emphasis on the latest programming language and tools to develop....">
   <meta name="keywords" content="Saintgits, saintgits, Saintgits MCA, saintgits mca, MCA, Saintgits MCA Department, saintgits mca department, saintgits mca github, Saintgits-MCA, saintgits-mca, saintgits mca college, Saintgits MCA College">
   <meta name="language" content="English">
-  <link rel="stylesheet" href="style.css">
+  <style>
+.a1{
+    color:snow;
+    text-decoration:none;
+  }
+
+  #center1{
+    font-size:20px;
+  }
+
+  .topnav{
+    background-color:red;
+border:9px solid red;
+height:50px;
+margin-right:0px;
+  }
+
+  .topnav2{
+    background-color:lightgrey;
+    margin-right:0px;
+  }
+
+#or
+{
+  text-align:center;
+}
+
+  #marq1
+  {
+    font-size:22px;
+  }
+
+.div3
+{
+  font-size: 26px;
+}
+
+.h1-1
+{
+  color:brown;
+  text-align:center;
+}
+#h4{
+  color:brown;
+}
+.plin1{
+  color:red;
+}
+.plin2
+{
+  color:blue;
+}
+.sub1
+{
+  color:darkgreen;
+}
+.list
+{
+  list-style-type:square;
+font-style:italic;
+}
+.topnav3
+{
+  background-color:whitesmoke;
+font-family:arial;
+}
+.topnav4{
+  background-color:snow;
+}
+.topnav5
+{
+  background-color:rgb(207, 238, 250);
+  border:9px solid rgb(207, 238, 250);
+  font-size:26px;
+}
+.topnav6{
+  background-color:rgb(32,79,179);
+}
+#b1{
+  color:red;
+}
+#a2{
+  text-decoration:none;
+font-family:arial;
+}
+a{
+  text-decoration:none;
+}
+#b3
+{
+  color:orangered;
+  font-size:22px;
+  text-align:justify;
+}
+.navy
+{
+  color:navy;
+  text-decoration:none
+}
+.p{
+    text-align:justify;
+    margin-left: 20px;
+    margin-right: 20px;
+}
+.black-link
+{
+  color:black;
+  text-decoration:none;
+}
+#bottomnav
+{
+ color:snow;
+}
+</style>
    </head>
   <body>
   <img src="../images/Header-Stickers5.webp" alt="Header-Stickers5.webp" width="424px" height="125px">
