--- a/index.html
+++ b/index.html
@@ -143,7 +143,6 @@ Rs. 76,720 CERD fund Sanctioned for Students’ Projects.&emsp;&emsp; ***&emsp;&
 Saintgits faculty members dominated the All Kerala – Art of Teaching Competition organised by APJ Abdul Kalam Technological University. Bagged 4 out of 12 titles! &emsp;&emsp;&emsp;&emsp;********</marquee></center>
   </div><br>
 <font size="5">
-  <div class="div3">
   <h1 class="h1-1" ><b>Master Of Computer Applications Department</b></h1>
   <center><p class="plin1">============<p1 class="plin2">=============</p1></p></center>
   
@@ -192,7 +191,7 @@ Saintgits faculty members dominated the All Kerala – Art of Teaching Competiti
    &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;<img src="../images/Envestnet.webp" alt="Envestnet" width="237px" height="210px">
    &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;<img src="../images/EY.webp" alt="EY " width="237px" height="210px">
    &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;<img src="../images/UST.webp" alt="UST" width="237px" height="210px">
-  </marquee> </div></font>
+  </marquee> </font>
   <br><br><br><br>
       <div class="topnav5"   width="500px">
   <h3><b>&nbsp;&nbsp;<u>Quick Links</u></b></h3><br>
