--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
   <title>&ensp;Saintgits MCA Department</title>
   <link rel="icon" href="../images/Logo.jpg"><meta name="viewport" content="width:device-width;initial-scale:1.0">
   <link rel="canonical" href="https://saintgits-mca.github.io">
-  <link rel="stylesheet" href="style.css">
   <meta http-equiv="Content-Type" content="text/html;charset=utf-8">
   <meta name="title" content="Saintgits MCA Department">
   <meta name="description" content="MCA at Saintgits is inclined more toward Application Development and thus has more emphasis on the latest programming language and tools to develop....">
   <meta name="keywords" content="Saintgits, saintgits, Saintgits MCA, saintgits mca, MCA, Saintgits MCA Department, saintgits mca department, saintgits mca github, Saintgits-MCA, saintgits-mca, saintgits mca college, Saintgits MCA College">
   <meta name="language" content="English">
+   <link rel="stylesheet" href="Style.css">
    </head>
   <body>
   <img src="../images/Header-Stickers5.webp" alt="Header-Stickers5.webp" width="424px" height="125px">
