--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <meta name="description" content="MCA at Saintgits is inclined more toward Application Development and thus has more emphasis on the latest programming language and tools to develop....">
   <meta name="keywords" content="Saintgits, saintgits, Saintgits MCA, saintgits mca, MCA, Saintgits MCA Department, saintgits mca department, saintgits mca github, Saintgits-MCA, saintgits-mca, saintgits mca college, Saintgits MCA College">
   <meta name="language" content="English">
-  <link rel="preload" as="font" type="Style.css"> 
+  <link rel="preload" as="font" href="Style.css" crossorigin/> 
   <link rel="stylesheet" href="Style.css">
   </head>
   <body>
