--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <meta name="keywords" content="Saintgits, saintgits, Saintgits MCA, saintgits mca, MCA, Saintgits MCA Department, saintgits mca department, saintgits mca github, Saintgits-MCA, saintgits-mca, saintgits mca college, Saintgits MCA College">
   <meta name="language" content="English">
   <link rel="preload" as="stylesheet" href="Style.css" crossorigin/>
+  <link rel="postload" as="stylesheet" href="Style.css" crossorigin/>
   <link rel="stylesheet" href="Style.css" /> 
     </head>
   <body>
