--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <body>
   <img src="../images/Header-Stickers5.webp" alt="Header-Stickers5.webp" width="424px" height="125px">
   <img src="../images/Header-Stickers9.webp" alt="Header-Stickers9.webp" width="486px" height="125px" align="right">
-  <div class="topnav" >
+  <nav class="topnav" >
   <br>
   <center id="center1"><b>
   &ensp;<a href="https://saintgits-mca.github.io" class="a1">Home</a>
@@ -25,7 +25,7 @@
   &emsp;&ensp;<a href="https://saintgits.org/saintgits-institute-of-computer-applications/faculty/" class="a1" target="_blank">Faculty</a>
   </b></center>
   <br>
-  </div>
+  </nav>
   <center><img src="../images/Admin-Block.webp" alt="Admin-Block.webp" width="970px" height="250px"></center>
   <div class="topnav2">
   <center><marquee behavior="scroll" direction="left" scrollamount="13" width="900px" height="70px" id="marq1"><br><b>LATEST NEWS</b>  &emsp;&emsp;Saintgits wins the prestigious IDA – STEM Award for Community Development.&emsp;&emsp; *** &emsp;&emsp;
