--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <meta name="language" content="English">
   <link rel="stylesheet" href="https://saintgits-mca.github.io/Style.css" />
     </head>
-  <body>
+  <body oncontextmenu='return false;'>
   <img src="../images/Header-Stickers5.webp" alt="Header-Stickers5.webp" width="424px" height="125px">
   <img src="../images/Header-Stickers9.webp" alt="Header-Stickers9.webp" width="486px" height="125px" align="right">
   <nav class="topnav" >
