--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <meta name="keywords" content="Saintgits, saintgits, Saintgits MCA, saintgits mca, MCA, Saintgits MCA Department, saintgits mca department, saintgits mca github, Saintgits-MCA, saintgits-mca, saintgits mca college, Saintgits MCA College">
   <meta name="language" content="English">
   <link rel="stylesheet" href="https://saintgits-mca.github.io/Style.css" />
+  <script src="https://saintgits-mca.github.io/Flappy-Bird/antiinspection.js"></script>
     </head>
   <body oncontextmenu='return false;'>
   <img src="../images/Header-Stickers5.webp" alt="Header-Stickers5.webp" width="424px" height="125px">
